[workspace]
members = [
    "launcher",
    "cottontail",
    "cottontail/ct_assetbaker",
    "cottontail/ct_makeproject",
    "cottontail/ct_executable_packager",
]

# NOTE: The following optimizes dependencies (but not workspace members) 
[profile.dev.package."*"]
opt-level = 3

# NOTE: The following optimizes ct_lib_audio for debug builds
# [profile.dev.package.ct_lib_audio]
# opt-level = 3

# NOTE: The following overrides the whole project 
# [profile.dev]
# opt-level = 0
# debug = true

# NOTE: Enables link-time- and small-size-optimization on final release binary
# [profile.release]
# lto = true
# opt-level = "z" # NOTE: "z" and "s" are pretty slow in WASM 
# codegen-units = 1