[package]
name = "launcher"
version = "3.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "launcher"

[[bin]]
path = "src/main_launcher.rs"
name = "launcher"

[dependencies]
ct_lib_core = { path = "../cottontail/ct_lib_core"}

crossterm = "0.23.1"
chrono = "0.4.19"
regex = "1.4.3"

